--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ dash-html-components==2.0.0
 fiona==1.8.18
 flask==1.1.2
 flask-compress==1.11
-gdal==3.2.1
+#gdal==3.2.1
 geopandas==0.8.1
 geopandas-base==0.10.2
 gunicorn==20.1.0
